src/snapshots/docgen__navigation__test__build_with_base_path.snap
---
source: src/navigation.rs
description: With base path
---
[
    Link {
        src: "one.md",
        children: [],
        path: "/example/one",
        title: "One",
    },
    Link {
        src: "two.md",
        children: [],
        path: "/example/two",
        title: "Two",
    },
    Link {
        src: "child",
        children: [
            Link {
                src: "child/three.md",
                children: [],
                path: "/example/child/three",
                title: "Three",
            },
        ],
        path: "/example/child/",
        title: "Nested Root",
    },
]
