src/snapshots/docgen__navigation__test__manual_menu_file_from_nested_directory.snap
---
source: src/navigation.rs
description: Manual menu file from nested directory
---
[
    Link {
        path: "/child/three",
        title: "Three",
        children: [],
        index: 4294967295,
    },
]
