src/snapshots/docgen__navigation__test__manual_menu_simple.snap
---
source: src/navigation.rs
description: Manual menu simple
---
[
    Link {
        path: "/one",
        title: "One",
        children: [],
        index: 4294967295,
    },
    Link {
        path: "/child/",
        title: "Nested Root",
        children: [
            Link {
                path: "/child/three",
                title: "Three",
                children: [],
                index: 4294967295,
            },
        ],
        index: 4294967295,
    },
]
